deprecate kwargs in connectedComponents
- put in new folder deps/
- add docs for @depkws
- also restructure docstrings
- support import/export with rules extensions
- make sure to make necessary changes for the rules stuff when doing the rules extensions
- modify analysis/graphs.jl to use it
- also allow for single-argument initializeModelManager() where the argument is the path to the project folder (containing both data and PhysiCell folders)
- flip as keyword for DistributedVariation
- n_replicates as kwarg in running sensitivity analysis
- sensitivity defaults to n_replicates=1
- light edit around Vararg

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -113,6 +113,8 @@ jobs:
         PCVCT_PUBLIC_REPO_AUTH: ${{ secrets.PUBLIC_REPO_AUTH }}
 
     - uses: julia-actions/julia-processcoverage@v1
+      with:
+        directories: src,deps
     
     - uses: codecov/codecov-action@v5
       with:
