--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,6 @@ Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 GlobalSensitivity = "af5da776-676b-467e-8baf-acd8249e4f0f"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
-LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
@@ -35,6 +34,7 @@ Sobol = "ed01d8cd-4d21-5b2a-85b4-cc3bdc58bad4"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
 
 [compat]
 AutoHashEquals = "2.2.0"
@@ -48,7 +48,6 @@ Glob = "1"
 GlobalSensitivity = "2"
 Graphs = "1.12.0"
 JSON3 = "1.14.1"
-LightXML = "0.9"
 LinearAlgebra = "1.10"
 MAT = "0.10"
 MacroTools = "0.5.16"
@@ -66,6 +65,7 @@ Sobol = "1"
 Statistics = "1"
 TOML = "1.0.3"
 Tables = "1"
+XML = "0.3.8"
 julia = "1.6.7"
 
 [extras]
