CompatHelper: bump compat for MAT to 0.11, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -50,7 +50,7 @@ Graphs = "1.12.0"
 JSON3 = "1.14.1"
 LightXML = "0.9"
 LinearAlgebra = "1.10"
-MAT = "0.10"
+MAT = "0.10, 0.11"
 MacroTools = "0.5.16"
 MetaGraphsNext = "0.7.2"
 PairCorrelationFunction = "0.0.11"
