--- a/Project.toml
+++ b/Project.toml
@@ -52,7 +52,7 @@ LightXML = "0.9"
 LinearAlgebra = "1.10"
 MAT = "0.11"
 MacroTools = "0.5.16"
-MetaGraphsNext = "0.7.2"
+MetaGraphsNext = "0.7.2, 0.8"
 PairCorrelationFunction = "0.0.11"
 Parameters = "0.12"
 PhysiCellCellCreator = "0.0.6"
